--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "debatetimer",
+  "name": "the-debate-timer",
   "version": "1.0.0",
   "description": "A debate timer electron app",
   "main": "app.js",
   "scripts": {
     "start": "electron .",
     "start-next": "next",
-    "build": "next build && next export"
+    "build": "next build && next export",
+    "package":"electron-packager ."
+  },
+  "build": {
+    "extraResources": ["./extraResources/**"]
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "dotenv": "^8.1.0",
     "electron": "^6.0.11",
+    "electron-packager": "^14.0.6",
     "next": "^9.0.8",
     "react": "^16.10.2",
     "react-dom": "^16.10.2"
+  },
+  "devDependencies": {
+    "electron":"^1.4.15"
   }
 }
