small changes to prep and add build-all

--- a/package.json
+++ b/package.json
@@ -7,10 +7,21 @@
     "start": "electron .",
     "start-next": "next",
     "build": "next build && next export",
-    "package":"electron-packager ."
+    "package":"electron-packager .",
+    "build-all":"electron-packager . --overwrite --platform=win32 --arch=ia32 --version-string.ProductName=\"the debate timer\" --out=win && electron-packager . --overwrite --asar=true --platform=linux --arch=x64 --out=linux && electron-packager . --overwrite --platform=darwin --arch=x64 --prune=true --out=mac"
   },
-  "build": {
-    "extraResources": ["./extraResources/**"]
+  "mac": {
+  "icon": "./assets/AppIcon.icns",
+    "category": "public.app-category.utilities"
+  },
+  "win": {
+    "icon": "./assets/app.png"
+  },
+  "files": [
+    "./assets/*"
+  ],
+  "directories": {
+    "buildResources": "assets"
   },
   "author": "",
   "license": "MIT",
