--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start-next": "next",
     "build": "next build && next export",
     "package":"electron-packager .",
-    "build-all":"electron-packager . --overwrite --platform=win32 --arch=ia32 --version-string.ProductName=\"the debate timer\" --out=win && electron-packager . --overwrite --asar=true --platform=linux --arch=x64 --out=linux && electron-packager . --overwrite --platform=darwin --arch=x64 --prune=true --out=mac"
+    "build-all":"electron-packager . --overwrite --icon=/Users/neelredkar/Documents/Git/DebateTimer/assets/app.ico --platform=win32 --arch=ia32 --version-string.ProductName=\"the debate timer\" --out=win && electron-packager . --overwrite --icon=/Users/neelredkar/Documents/Git/DebateTimer/assets/app.png --asar=true --platform=linux --arch=x64 --out=linux && electron-packager . --overwrite --icon=/Users/neelredkar/Documents/Git/DebateTimer/assets/AppIcon.icns --out=mac"
   },
   "mac": {
   "icon": "./assets/AppIcon.icns",
