add message and home button

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^8.1.0",
     "electron": "^6.0.11",
     "electron-packager": "^14.0.6",
+    "fs": "0.0.1-security",
     "next": "^9.0.8",
     "react": "^16.10.2",
     "react-dom": "^16.10.2"
